[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/ui/spell_inputs/rune.gd" type="Script" id=1]
[ext_resource path="res://src/OLD/UI/RuneGlowWin.shader" type="Shader" id=2]
[ext_resource path="res://src/OLD/UI/RuneGlowFail.shader" type="Shader" id=3]
[ext_resource path="res://src/OLD/UI/RuneGlow.shader" type="Shader" id=4]
[ext_resource path="res://assets/ui/buttons.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/runes.png" type="Texture" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/ChromaKey = Color( 0.490196, 0.576471, 0.607843, 1 )
shader_param/GlowColor = Color( 0.348152, 0.75, 0.219727, 1 )
shader_param/OutlineWidth = 1.0
shader_param/Diffuse = ExtResource( 6 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/ChromaKey = Color( 0.490196, 0.576471, 0.607843, 1 )
shader_param/GlowColor = Color( 0.757812, 0.301652, 0.296021, 1 )
shader_param/OutlineWidth = 1.0

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteNormal:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteWin:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteFail:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RuneNormal:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RuneWin:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("RuneFail:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteNormal:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteWin:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteFail:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RuneNormal:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RuneWin:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("RuneFail:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteNormal:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteWin:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteFail:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RuneWin:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RuneFail:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("RuneNormal:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Rune" type="Node2D"]
script = ExtResource( 1 )

[node name="RuneNormal" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -64 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
region_rect = Rect2( 0, 0, 16, 16 )

[node name="RuneWin" type="Sprite" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 0.707092, -64.0607 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
region_rect = Rect2( 0, 0, 16, 16 )

[node name="RuneFail" type="Sprite" parent="."]
visible = false
material = SubResource( 3 )
position = Vector2( 0, -64 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
vframes = 3
hframes = 8
region_rect = Rect2( 0, 0, 16, 16 )

[node name="SpriteNormal" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.435294 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 16, 96, 16, 16 )

[node name="SpriteWin" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.435294 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 16, 0, 16, 16 )

[node name="SpriteFail" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.435294 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 16, 48, 16, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 4 )
anims/fail = SubResource( 5 )
anims/win = SubResource( 6 )
